# notes-helper

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
agent/: api.py  client.py  llm.py  memory.py  min_server.py  server.py
data/: faiss.index  metadata.json
data/raw_text/: M3_Deadlock.txt  M4-2.txt  M5.txt  M6_FS.txt  M6_FS_Dir.txt  M7.txt  M7_1.txt  Module 1.txt  Module 2.txt  Module 3.txt  Module 3_Example.txt  Semaphores.txt  Tutorial 1.txt
ingest/: build_index.py  chunker.py  extract_text.py
rag/: retriever.py
ui/: app.py
